<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- ProgressBar -->
        <ProgressBar
            android:id="@+id/profile_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/profile_form">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/profile_textView_seller_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seller_name"
                    android:textSize="@dimen/profile_text_size"/>

                <TextView
                    android:id="@+id/profile_textView_seller_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seller_name"
                    android:textSize="@dimen/profile_text_size"
                    android:textColor="@color/colorAccent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/profile_textView_address_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="@dimen/profile_text_size"/>

                <TextView
                    android:id="@+id/profile_textView_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="@dimen/profile_text_size"
                    android:textColor="@color/colorAccent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp">
                <TextView
                    android:id="@+id/profile_textView_contact_person_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/contact_person"
                    android:textSize="@dimen/profile_text_size"/>

                <TextView
                    android:id="@+id/profile_textView_contact_person"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/contact_person"
                    android:textSize="@dimen/profile_text_size"
                    android:textColor="@color/colorAccent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp">
                <TextView
                    android:id="@+id/profile_textView_contact_number_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/contact_number"
                    android:textSize="@dimen/profile_text_size"/>

                <TextView
                    android:id="@+id/profile_textView_contact_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/contact_number"
                    android:textSize="@dimen/profile_text_size"
                    android:textColor="@color/colorAccent"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"
                android:visibility="gone"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/profile_editText_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textSize="@dimen/profile_text_size"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/profile_button_update_profile"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/update_profile"
                android:layout_gravity="center"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_height="2dp"
                android:visibility="gone"
                android:background="@color/colorPrimary"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/profile_editText_OldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/old_password"
                    android:inputType="textPassword"
                    android:layout_marginTop="40dp"
                    android:maxLines="1"
                    android:textSize="@dimen/profile_text_size"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/profile_editText_newPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="@dimen/profile_text_size"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/profile_editText_RetypeNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/retype_new_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="@dimen/profile_text_size"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/profile_button_change_password"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/change_password"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>