<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp">

    <!--
    <LinearLayout
        android:id="@+id/trans_listItem_child_saleAmount_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/trans_listItem_child_saleAmount_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sale_amount"
        android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/trans_listItem_child_saleAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sale_amount"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/trans_listItem_child_cancelAmount_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/trans_listItem_child_cancelAmount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_amount"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/trans_listItem_child_cancelAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_amount"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/trans_listItem_child_returnAmount_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/trans_listItem_child_returnAmount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_amount"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/trans_listItem_child_returnAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_amount"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/trans_listItem_child_totalTaxAmount_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/trans_listItem_child_totalTaxAmount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalTax_amount"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/trans_listItem_child_totalTaxAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalTax_amount"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/trans_listItem_child_oldBalanceAmount_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/trans_listItem_child_oldBalanceAmount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oldBalance_amount"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/trans_listItem_child_oldBalanceAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oldBalance_amount"/>
    </LinearLayout>
-->

    <LinearLayout
        android:id="@+id/trans_listItem_child_netSaleAmount_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/trans_listItem_child_saleAmount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sale_amount"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/trans_listItem_child_saleAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sale_amount"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/trans_listItem_child_discountAmount_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/trans_listItem_child_discountAmount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discount_amount"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/trans_listItem_child_discountAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discount_amount"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/trans_listItem_child_cashPaidAmount_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/trans_listItem_child_cashPaidAmount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cashPaid_amount"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/trans_listItem_child_cashPaidAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cashPaid_amount"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/trans_listItem_child_balanceAmount_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/trans_listItem_child_balanceAmount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance_amount"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/trans_listItem_child_balanceAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance_amount"/>
    </LinearLayout>

</LinearLayout>